<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.GameRoomActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/roomIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:ems="10"
            android:padding="14dp"
            android:text="@string/room_id"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:padding="14dp"
            android:text="@string/start_game"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_leave_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            android:ems="10"
            android:padding="14dp"
            android:text="@string/leave_room"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/players_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="14dp"
            android:text="@string/players"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="26sp" />

        <LinearLayout
        android:id="@+id/parent_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/field"/>

    </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>