<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".app.activity.RegisterActivity">

    <ImageView
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/background_up"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/circular_border"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/person" />

    </FrameLayout>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/up"
        android:layout_centerHorizontal="true"
        android:text="@string/drawdiculous"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_border"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="7dp"
        android:paddingVertical="10dp"
        android:paddingTop="20dp"
        android:layout_below="@id/title">

        <EditText
            android:id="@+id/register_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:hint="@string/user_name"
            android:textColorHint="#BCB9B9" />

        <EditText
            android:id="@+id/register_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:hint="@string/email"
            android:textColorHint="#BCB9B9" />

        <EditText
            android:id="@+id/register_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#BCB9B9" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_button"
        android:paddingHorizontal="72dp"
        android:paddingVertical="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold">

    </Button>

    <ImageView
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/background_down" />


</RelativeLayout>