<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".app.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_background_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/background_up"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/person_icon_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/circular_border"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/person" />

    </FrameLayout>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_background_up"
        android:layout_centerHorizontal="true"
        android:text="@string/drawdiculous"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/login_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_border"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="40dp"
        android:paddingBottom="50dp">


        <EditText
            android:id="@+id/login_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="#000000"
            android:drawableStart="@drawable/ic_uname"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#BCB9B9" />

        <EditText
            android:id="@+id/login_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="#000000"
            android:drawableStart="@drawable/ic_password"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#BCB9B9">

        </EditText>


    </LinearLayout>

    <TextView
        android:id="@+id/forget_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#7A58B6"
        android:layout_below="@id/login_text_layout"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_button"
        android:paddingHorizontal="72dp"
        android:paddingVertical="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold">

    </Button>

    <ImageView
        android:id="@+id/login_background_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/background_down"
        tools:ignore="ContentDescription" />


</RelativeLayout>