<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.HomeActivity"
    tools:ignore="ExtraText">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@drawable/empty_tall_divider"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:ems="10"
            android:padding="14dp"
            android:text="@string/play_game"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:divider="@drawable/empty_tall_divider"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <Button
                android:id="@+id/create_game_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:ems="10"
                android:padding="14dp"
                android:text="@string/create_game"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/join_game_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:padding="14dp"
                android:text="@string/join_game"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/join_random_game_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:ems="10"
                android:padding="14dp"
                android:text="@string/join_random_game"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/background_down" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>