<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".app.activity.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/background_up" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circular_border"

            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/person" />

        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/up"
            android:layout_centerHorizontal="true"
            android:text="@string/drawdiculous"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/square_border"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingTop="40dp"
            android:paddingBottom="50dp">


            <EditText
                android:id="@+id/forgot_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:drawableStart="@drawable/ic_uname"
                android:gravity="center"
                android:hint="@string/email"
                android:textColor="#BCB9B9"
                android:textColorHint="#BCB9B9">

            </EditText>


        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/email_prompt"
            android:textColor="#7A58B6"
            android:textStyle="bold"
            android:visibility="invisible" />


        <Button
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/square_border"
            android:onClick="recover"
            android:paddingHorizontal="72dp"
            android:paddingVertical="10dp"
            android:text="@string/recover"
            android:textColor="@color/white"
            android:textStyle="bold">

        </Button>

        <ImageView
            android:id="@+id/down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/background_down" />

    </RelativeLayout>
</LinearLayout>